Fix spacing

--- a/client/src/components/Form.css
+++ b/client/src/components/Form.css
@@ -96,7 +96,7 @@ h1 {
 }
 
 .checkbox-form-group input {
-  padding-right: 5px;
+  margin-right: 5px;
 }
 
 .select li {
